--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">異常を検出した場合、サウンドで知らせる</string>
   <string name="Added_successfully">バインドうまく</string>
   <string name="Alarm_WeChat">警報を微信で受信</string>
+  <string name="Alarm_WeChat_NoBindTips">この関数を使用すると、電子メールを最初にバインドする必要があります。</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">戻す</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">キャッシュクリア</string>
   <string name="CODE_ERR">有効な検証コードを入力してください</string>
   <string name="COMFIRM_NEW_PASS">新しいパスワードを確認してください</string>
-  <string name="CONNECTING">接続中（複数で同時検索できません）</string>
+  <string name="CONNECTING">デバイスに反応がありません。再試行してください</string>
   <string name="CONNECTING_1">ネットワーク接続中、しばらくお待ちください</string>
   <string name="CONN_INTERRUPTED">接続中止、カメラのネットワークをチェックしてください</string>
   <string name="CREATING">作成中、しばらくお待ちください&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">ボイス</string>
   <string name="DOOR_WIFI_HINT">デバイスのライト状態説明</string>
   <string name="DailyGreatTips_Full">毎日の見どころのコレクションは削除に行くかどうか、50の上限に達していますか？</string>
+  <string name="Daily_Great_NO_CONTENTS">コンテンツなし</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">共有を削除しますか？</string>
   <string name="Device_Disconnected">接続が切断されました</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">スライドして\nにもっと多くの内容が表示されます</string>
   <string name="GetCode_FrequentlyTips">操作が頻繁になると、10分後にもう一度お試しください。</string>
   <string name="GetWifiList_FaiTips">1.アプリに「場所」権限を許可する \n 2.「GPS」をオンにします。</string>
+  <string name="H5_Asteroid">小惑星</string>
+  <string name="H5_Fisheye">フィッシュアイ</string>
+  <string name="H5_Panoramic">パノラマ</string>
+  <string name="H5_VR_mode">VRモード</string>
   <string name="HOME">ホーム</string>
   <string name="HOUR">时</string>
   <string name="HOURS">24時間プロプティング</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">青く点灯する、3G/4Gオンライン</string>
   <string name="LIGTH_LABEL_2_1">点滅、バッテリーが低いです</string>
   <string name="LIGTH_LABEL_2_2">青く点灯する、正常に電源が入っている</string>
+  <string name="LIVE_DATA">非WiFiネットワーク、データ消費に注意してください</string>
   <string name="LOADING">読み込み中&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">先にPhoneの設定－通知画面に %s を見つけ、\"通知を許可\"をオンにしてください</string>
   <string name="LOCATION">位置の名前</string>
@@ -408,7 +415,7 @@
   <string name="RECORD_INFO_1">24時間録画を起動します</string>
   <string name="RECORD_INFO_2">いかなる時でも録画を起動しません</string>
   <string name="RECORD_MODE">異常を検出した時</string>
-  <string name="RECORD_MODE_1">24時間</string>
+  <string name="RECORD_MODE_1">終日</string>
   <string name="RECORD_MODE_2">録画しない</string>
   <string name="RECORD_MODE_CHANGE">現在の設定が「帰宅モード」のため、移動検出がオフにされています。オンにする場合はモードを変更してください。</string>
   <string name="RECORD_NO_FIND">この時間帯の動画が見つかりません</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">設定中&#8230;</string>
   <string name="SETTINGS">設定</string>
   <string name="SETTINGS_1">機能設定</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">オフにすると微信のプッシュ通知を受信できなくなります。バインディングを解除したい場合、微信で「Clever Dog公式微信サービス」のアカウントのフォローを解除してください。</string>
-  <string name="SETTINGS_Wechat_Switch_Open">微信アカウント \"Clever Dog公式微信サービス\"に注目し、古い微信アカウントの成功がメッセージプッシュを受信しなくなったらバインドしてください</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">オフにすると微信のプッシュ通知を受信できなくなります。バインディングを解除したい場合、微信で「加菲狗官微服务」のアカウントのフォローを解除してください。</string>
+  <string name="SETTINGS_Wechat_Switch_Open">微信アカウント \"加菲狗官微服务\"に注目し、古い微信アカウントの成功がメッセージプッシュを受信しなくなったらバインドしてください</string>
   <string name="SETTING_DIRECTION">動画方向</string>
   <string name="SETTING_FREE">デバイスの移動検出および警報を自由にカスタマイズする</string>
-  <string name="SETTING_RECORD">自動録画</string>
+  <string name="SETTING_RECORD">ビデオ設定</string>
   <string name="SETTING_SD">Micro SDカード</string>
   <string name="SETTING_TIMEZONE">デバイスタイムゾーン</string>
   <string name="SET_NEW_PWD">新しいパスワードを設定する</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">指示を開く</string>
   <string name="Start_instructions_A">拘束力のあるClever Dog電子メールのWeChat Official Accountsでは、この機能を開くことができます。</string>
   <string name="Start_instructions_B">次のように進んでください：</string>
-  <string name="Start_instructions_C">1. WeChatの公開番号「Clever Dog公式微信サービス」に注意してください。</string>
-  <string name="Start_instructions_D">方法1： \"+\">連絡先の追加>公式アカウントの右上隅にあるWeChatをクリックし、 \"Clever Dog公式微信サービス\"を検索してください。</string>
+  <string name="Start_instructions_C">1. WeChatの公開番号「加菲狗官微服务」に注意してください。</string>
+  <string name="Start_instructions_D">方法1： \"+\">連絡先の追加>公式アカウントの右上隅にあるWeChatをクリックし、 \"加菲狗官微服务\"を検索してください。</string>
   <string name="Start_instructions_E">方法2：このページのスクリーンショットまたは次の2次元コードをWeChatスイープスイープの注意書きでアルバムに保存します。</string>
   <string name="Start_instructions_F">2.アカウントをバインドする</string>
-  <string name="Start_instructions_G">注意してください \"巧妙な犬WeChat公式アカウント\"公式アカウントは、メインページを入力し、サービスのメニューバーをクリックして、バインディングアカウントを選択します。</string>
+  <string name="Start_instructions_G">注意してください \"加菲狗官微服务\"公式アカウントは、メインページを入力し、サービスのメニューバーをクリックして、バインディングアカウントを選択します。</string>
   <string name="Start_instructions_H">アカウントをバインドする</string>
   <string name="Start_instructions_I">パスワードを忘れるなど、賢い犬の電話/メールアカウントを入力してください。賢い犬のクライアントに戻ってください。</string>
   <string name="Switch_Mode">撮影内容を見るにはダイレクトモードに切り替えてください</string>
@@ -672,7 +679,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">閉じる確認し</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">カメラが安全待機中です、遅延撮影を作動するには安全待機モードをオフにする必要があります、すぐオフにしますか。</string>
   <string name="Tap1_CameraFun_Timelapse_document">遅延撮影を作動し、更なる見どころを発見</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s 時間</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">％時間</string>
   <string name="Tap1_CameraFun_UninitializedTips">Micro SDカードの読み込みに失敗しました</string>
   <string name="Tap1_CameraFun_VideoDirection">画面回転</string>
   <string name="Tap1_Camera_BackLiveTips">戻る生放送</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">低消費電力、時間で充電してください。</string>
   <string name="Tap1_Magnetism_ClearRecord">レコードをクリア</string>
   <string name="Tap1_Magnetism_Setting_Notify">オン/オフ情報を知らせて</string>
+  <string name="Tap1_Menu_More">もっと</string>
   <string name="Tap1_NeedsInitializedTips">SDカードを初期化してデータをクリアする必要がありますか？</string>
   <string name="Tap1_NewFirmware">新しいファームウェア</string>
   <string name="Tap1_NoMessages">メッセージはありません</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">生放送の画像切り取り</string>
   <string name="Tap2_Timelapse_title">遅延撮影</string>
   <string name="Tap2_TitleName">毎日の見どころ</string>
+  <string name="Tap2_TitleName_Sentence">毎日の見どころ</string>
   <string name="Tap2_share_sharevideo">一つのビデオを共有していただきました。</string>
   <string name="Tap2_share_sharevideo_tips">見家王を使ってビデオを撮りました。さあ、見てみませんか。</string>
   <string name="Tap2_share_unabletoshare">携帯端末でWeChatアプリをインストールされてませんので、共有できません。</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">デバイスは連動されていません</string>
   <string name="Tap3_ShareDevice_NoShare">共有されていません</string>
   <string name="Tap3_ShareDevice_NoneFriends">なし</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">なし</string>
   <string name="Tap3_ShareDevice_NotYourself">自分にシェアできません</string>
   <string name="Tap3_ShareDevice_Shared">シェアード</string>
   <string name="Tap3_ShareDevice_SharedContents">共有コンテンツ</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">ヘルプ</string>
   <string name="Unconnect_Network">お使いの端末はモバイルネットワークまたはWi&#8211;Fiネットワークに接続されていません</string>
   <string name="VALID_STORAGE">ストレージ容量</string>
+  <string name="VIDEO_FirmwareUpdating">ファームウェアのアップデート&#8230;</string>
   <string name="VIDEO_REFRESHING">アップロード中、お待ちください</string>
   <string name="VIDEO_SD_DESC">Micro SDカードを読み込めません。初期化してください</string>
   <string name="WARN_TIME">警報時間帯</string>
