--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">Wenn Ungewöhnliches erkannt wird, tönt das Gerät</string>
   <string name="Added_successfully">Binden erfolgreich</string>
   <string name="Alarm_WeChat">Alarmmeldungen per Wechat erhalten</string>
+  <string name="Alarm_WeChat_NoBindTips">Mit dieser Funktion muss zuerst die E&#8211;Mail gebunden werden.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">Cache leeren</string>
   <string name="CODE_ERR">Bitte den gültigen Spamschutzcode eingeben</string>
   <string name="COMFIRM_NEW_PASS">Neues Passwort wiederholen</string>
-  <string name="CONNECTING">In Verbindung, mehrere Leute zugleich nachschauen nicht erlaubt</string>
+  <string name="CONNECTING">Ausrüstung keine Antwort, versuchen Sie es erneut</string>
   <string name="CONNECTING_1">In Verbindung,einen Moment bitte</string>
   <string name="CONN_INTERRUPTED">Verbindung abgebrochen, bitte Internet überprüfen</string>
   <string name="CREATING">Einen Moment bitte&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">Stimme</string>
   <string name="DOOR_WIFI_HINT">Anleitung für LED&#8211;Anzeiger</string>
   <string name="DailyGreatTips_Full">Collection Anzahl von Täglich Groß erreicht die obere Grenze 50, gehen zu löschen?</string>
+  <string name="Daily_Great_NO_CONTENTS">Kein Inhalt</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Aktien löschen?</string>
   <string name="Device_Disconnected">Getrennt</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">Schieben , \n zeigt mehr Inhalte</string>
   <string name="GetCode_FrequentlyTips">Zu oft Operationen, versuchen Sie es erneut 10 Minuten später.</string>
   <string name="GetWifiList_FaiTips">1.App erlauben, die Berechtigung \"Standort\" zu erhalten \n 2.Schalten Sie \"GPS\" ein.</string>
+  <string name="H5_Asteroid">Asteroid</string>
+  <string name="H5_Fisheye">Fisheye</string>
+  <string name="H5_Panoramic">Panorama&#8211;</string>
+  <string name="H5_VR_mode">VR&#8211;Modus</string>
   <string name="HOME">Homepage</string>
   <string name="HOUR">H</string>
   <string name="HOURS">Ganztäglich</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">Blinkt es blau, ist es online via 3G/4G</string>
   <string name="LIGTH_LABEL_2_1">Blinkt, Die Batterie ist schwach</string>
   <string name="LIGTH_LABEL_2_2">Leuchtet es blau ständig, ist mit normaler elektronischer Leitung verbunden</string>
+  <string name="LIVE_DATA">Für Mobilfunk, beachten Sie bitte Ihre Datenverwendung</string>
   <string name="LOADING">Wird geladen&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">Bitte %s auf Seite Einstellungen&#8211;Mitteilungen im Phone finden, und Mitteilungen erlauben einschalten</string>
   <string name="LOCATION">Ort:</string>
@@ -408,7 +415,7 @@
   <string name="RECORD_INFO_1">Video für 24 Stunden einsetzen</string>
   <string name="RECORD_INFO_2">Nie Video aufnehmen</string>
   <string name="RECORD_MODE">Ungewöhnliches erkannt</string>
-  <string name="RECORD_MODE_1">24 Stunden</string>
+  <string name="RECORD_MODE_1">Den ganzen Tag</string>
   <string name="RECORD_MODE_2">Nie</string>
   <string name="RECORD_MODE_CHANGE">Es ist jetzt im Modus Zuhause, Bewegungserkennung bereits geschlossen, möchten Sie einschalten, bitte den Modus wechseln?</string>
   <string name="RECORD_NO_FIND">Kein Video in diesem Zeitraum</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">In Einstellung&#8230;</string>
   <string name="SETTINGS">Einstellung</string>
   <string name="SETTINGS_1">Funktionseinstellung</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">Nach dem Deaktivieren werden Sie die Wechat&#8211;Benachrichtigung nicht mehr erhalten. Möchten Sie die Verbindung trennen, bitte gehen Sie zu Wechat und das offizielle Konto \"Clever Dog\" nicht mehr folgen.</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Bitte konzentriere dich auf das WeChat&#8211;Konto \"Clever Dog WeChat Official Account\" und binden, nach dem Erfolg des alten WeChat&#8211;Kontos wird die Meldung nicht mehr erhalten</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Nach dem Deaktivieren werden Sie die Wechat&#8211;Benachrichtigung nicht mehr erhalten. Möchten Sie die Verbindung trennen, bitte gehen Sie zu Wechat und das offizielle Konto \"加菲狗官微服务\" nicht mehr folgen.</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Bitte konzentriere dich auf das WeChat&#8211;Konto \"加菲狗官微服务\" und binden, nach dem Erfolg des alten WeChat&#8211;Kontos wird die Meldung nicht mehr erhalten</string>
   <string name="SETTING_DIRECTION">Richtung des Videos</string>
   <string name="SETTING_FREE">Bewegungserkennung und Alarm vom Einzelgerät einstellen</string>
-  <string name="SETTING_RECORD">Automatische Videoaufnahme</string>
+  <string name="SETTING_RECORD">Video&#8211;Einstellungen</string>
   <string name="SETTING_SD">Micro SD&#8211;Karte</string>
   <string name="SETTING_TIMEZONE">Zeitzone einstellen</string>
   <string name="SET_NEW_PWD">Neues Passwort erstellen</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">Öffnen Sie die Anweisungen</string>
   <string name="Start_instructions_A">In den WeChat Offiziellen Konten in der verbindlichen Clever Dog E&#8211;Mail können Sie diese Funktion öffnen.</string>
   <string name="Start_instructions_B">Gehen Sie wie folgt vor:</string>
-  <string name="Start_instructions_C">1. Bitte achten Sie auf WeChat öffentliche Nummer \"Clever Dog WeChat Official Account\"</string>
-  <string name="Start_instructions_D">Methode 1: klicke auf die WeChat in der oberen rechten Ecke des \"+\"> Kontakte hinzufügen> Offizielle Konten, suche \"Clever Dog WeChat Official Account\" und dann besorgt.</string>
+  <string name="Start_instructions_C">1. Bitte achten Sie auf WeChat öffentliche Nummer \"加菲狗官微服务\"</string>
+  <string name="Start_instructions_D">Methode 1: klicke auf die WeChat in der oberen rechten Ecke des \"+\"> Kontakte hinzufügen> Offizielle Konten, suche \"加菲狗官微服务\" und dann besorgt.</string>
   <string name="Start_instructions_E">Methode 2: Screenshot dieser Seite oder speichern Sie den folgenden zweidimensionalen Code auf das Album, in der WeChat Sweep Sweep Aufmerksamkeit.</string>
   <string name="Start_instructions_F">2. Bindekonto</string>
-  <string name="Start_instructions_G">Achtung \"Clever Dog WeChat Official Account\" Offizielle Konten, geben Sie die Hauptseite, klicken Sie auf die Menüleiste des Dienstes, wählen Sie das verbindliche Konto.</string>
+  <string name="Start_instructions_G">Achtung \"加菲狗官微服务\" Offizielle Konten, geben Sie die Hauptseite, klicken Sie auf die Menüleiste des Dienstes, wählen Sie das verbindliche Konto.</string>
   <string name="Start_instructions_H">Bindekonto</string>
   <string name="Start_instructions_I">Bitte geben Sie die Clever Hund email Konto zu binden, wie vergessen Sie das Passwort bitte gehen Sie an die Clever Hund Client zurück</string>
   <string name="Switch_Mode">Bitte wechseln Sie zum direkten Modus, um den Aufnahmeinhalt anzuzeigen</string>
@@ -672,9 +679,9 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Kamera in Standby, zur Einschaltung der Zeitrafferaufnahme muss der Standby&#8211;Modus ausgeschaltet werden. Möchten Sie ausschalten?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">ausschalten</string>
   <string name="Tap1_CameraFun_Timelapse_document">Zeitrafferaufnahme einschalten um mehr Highlight zu erwerben</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s tunde(n)</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">% Stunde(n)</string>
   <string name="Tap1_CameraFun_UninitializedTips">Mikro&#8211;SD&#8211;Karte lesen gescheitert</string>
-  <string name="Tap1_CameraFun_VideoDirection">umgedreht (Bild umdrehen)</string>
+  <string name="Tap1_CameraFun_VideoDirection">Umkehren</string>
   <string name="Tap1_Camera_BackLiveTips">Zurück zu live</string>
   <string name="Tap1_Camera_Front">Vorderseite</string>
   <string name="Tap1_Camera_FrontTips">Die Betrachtung mit horizontalem Winkel muss ein breites Sehvermögen vor der Kamera beibehalten</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">Niedrige Leistung, bitte in der Zeit aufladen.</string>
   <string name="Tap1_Magnetism_ClearRecord">Löschen Sie den Datensatz</string>
   <string name="Tap1_Magnetism_Setting_Notify">Benachrichtige mich, wenn es offen/geschlossen ist</string>
+  <string name="Tap1_Menu_More">Mehr</string>
   <string name="Tap1_NeedsInitializedTips">SD&#8211;Karte muss initialisiert werden und die Daten werden gelöscht.</string>
   <string name="Tap1_NewFirmware">Neue Firmware</string>
   <string name="Tap1_NoMessages">Keine Nachrichten</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">Live&#8211;Screenshot</string>
   <string name="Tap2_Timelapse_title">Zeitrafferaufnahme</string>
   <string name="Tap2_TitleName">Tageshighlight</string>
+  <string name="Tap2_TitleName_Sentence">Tageshighlight</string>
   <string name="Tap2_share_sharevideo">Ich teilte ein Video mit dort</string>
   <string name="Tap2_share_sharevideo_tips">IV Tirade DEA Zeitrafferaufnahmen von kluger Hund Smart&#8211;Kamera, check it out!</string>
   <string name="Tap2_share_unabletoshare">Kein WeChat installiert ist, nicht in der Lage zu teilen</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">Kein Gerät vorhanden</string>
   <string name="Tap3_ShareDevice_NoShare">Nicht geteilt</string>
   <string name="Tap3_ShareDevice_NoneFriends">Keiner</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">Keiner</string>
   <string name="Tap3_ShareDevice_NotYourself">Sie können nicht mit Ihnen selbst teilen</string>
   <string name="Tap3_ShareDevice_Shared">Gemeinsam genutzt</string>
   <string name="Tap3_ShareDevice_SharedContents">Geteilte Inhalt</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">Verwenden der Hilfe</string>
   <string name="Unconnect_Network">Ihr Gerät ist nicht mit einem Mobilfunknetz oder einem Wi&#8211;Fi&#8211;Netzwerk verbunden</string>
   <string name="VALID_STORAGE">Speicher</string>
+  <string name="VIDEO_FirmwareUpdating">Firmware Updating&#8230;</string>
   <string name="VIDEO_REFRESHING">Wird geladen, einen Moment bitte</string>
   <string name="VIDEO_SD_DESC">Micro SD&#8211;Karte nach der Initialisierung verwendbar</string>
   <string name="WARN_TIME">Zeit des Alarms</string>
