--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">Scegli l\'avviso audio da riprodurre quando viene rilevato un movimento</string>
   <string name="Added_successfully">Aggiunto con successo</string>
   <string name="Alarm_WeChat">Ricevi il messaggio di allarme con Wechat</string>
+  <string name="Alarm_WeChat_NoBindTips">Utilizzando questa funzione deve binding e&#8211;mail prima.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">Cancella Cache</string>
   <string name="CODE_ERR">Codice non valido</string>
   <string name="COMFIRM_NEW_PASS">Conferma nuova password</string>
-  <string name="CONNECTING">Avere qualcuno per guardare video in diretta</string>
+  <string name="CONNECTING">Nessuna reazione, riprova per favore</string>
   <string name="CONNECTING_1">Connessione in corso</string>
   <string name="CONN_INTERRUPTED">Collegamento alla rete</string>
   <string name="CREATING">Aggiungere&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">Voce</string>
   <string name="DOOR_WIFI_HINT">Indicatore di stato LED</string>
   <string name="DailyGreatTips_Full">il numero di Raccolta dei Splendida della giornata ha raggiunto il limite massimo di 50, andando a eliminare?</string>
+  <string name="Daily_Great_NO_CONTENTS">Nessun contenuto</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Elimina condivisione?</string>
   <string name="Device_Disconnected">Disconnessa</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">Scorrere \n per mostrare di più</string>
   <string name="GetCode_FrequentlyTips">Troppo spesso le operazioni, si prega di riprovare 10 minuti più tardi.</string>
   <string name="GetWifiList_FaiTips">1.Consentire app per ottenere l\'autorizzazione \"Location\" \n 2.Turn \"GPS\" su.</string>
+  <string name="H5_Asteroid">Asteroide</string>
+  <string name="H5_Fisheye">fisheye</string>
+  <string name="H5_Panoramic">panoramico</string>
+  <string name="H5_VR_mode">Modalità VR</string>
   <string name="HOME">Home</string>
   <string name="HOUR">H</string>
   <string name="HOURS">24 ore</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">Led blu, 3G/4G online</string>
   <string name="LIGTH_LABEL_2_1">Lampeggiante, la batteria è scarica</string>
   <string name="LIGTH_LABEL_2_2">Led blu, con l\'elettricità</string>
+  <string name="LIVE_DATA">Per cellulari, tieni presente il tuo utilizzo dei dati</string>
   <string name="LOADING">In caricamento&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">Clicca sulla \"%s\" nella rubbrica \"Impostazioni\" del tuo Phone e attiva \"Messaggi\"</string>
   <string name="LOCATION">Luogo:</string>
@@ -408,7 +415,7 @@
   <string name="RECORD_INFO_1">Attiva 24 ore di video</string>
   <string name="RECORD_INFO_2">Disabilita registrazione video</string>
   <string name="RECORD_MODE">Quando rilevato un movimento</string>
-  <string name="RECORD_MODE_1">24 ore</string>
+  <string name="RECORD_MODE_1">Tutto il giorno</string>
   <string name="RECORD_MODE_2">Mai</string>
   <string name="RECORD_MODE_CHANGE">Attualmente il tuo stato è \"a casa\", rilevatori di movimento sono disattivati. Se serve, cambiare impostazioni</string>
   <string name="RECORD_NO_FIND">Nessun video nel periodo selezionato</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">Impostazioni&#8230;</string>
   <string name="SETTINGS">Impostazioni</string>
   <string name="SETTINGS_1">Impostazioni Funzioni</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">Non puoi ricevere il push di Wechat se chiudi. Se vuoi cancellare il collegamento, ti preghiamo di vai a Wechat per smettere di seguire l\'account ufficiale \"Servizio di Wechat Ufficiale di Clever Dog\".</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Si prega di concentrarsi sull\'account WeChat \"Servizio di Wechat Ufficiale di Clever Dog\" e legare, dopo il successo del vecchio account WeChat, non riceverà più il messaggio</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Non puoi ricevere il push di Wechat se chiudi. Se vuoi cancellare il collegamento, ti preghiamo di vai a Wechat per smettere di seguire l\'account ufficiale \"加菲狗官微服务\".</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Si prega di concentrarsi sull\'account WeChat \"加菲狗官微服务\" e legare, dopo il successo del vecchio account WeChat, non riceverà più il messaggio</string>
   <string name="SETTING_DIRECTION">Direzione video</string>
   <string name="SETTING_FREE">Usare tutti I rilevatori di movimento come default</string>
-  <string name="SETTING_RECORD">Registra video</string>
+  <string name="SETTING_RECORD">Impostazioni video</string>
   <string name="SETTING_SD">Micro SD card</string>
   <string name="SETTING_TIMEZONE">Time zone</string>
   <string name="SET_NEW_PWD">Impostare una nuova password</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">Aprire le istruzioni</string>
   <string name="Start_instructions_A">Nei Conti ufficiali di WeChat nell\'e&#8211;mail di Clever Dog, è possibile aprire questa funzione.</string>
   <string name="Start_instructions_B">Procedere come segue:</string>
-  <string name="Start_instructions_C">1. Si prega di prestare attenzione al numero pubblico WeChat \"Servizio di Wechat Ufficiale di Clever Dog\"</string>
-  <string name="Start_instructions_D">Metodo 1: fare clic sul WeChat nell\'angolo in alto a destra della casella \"+\"> Aggiungi contatti> Account ufficiali, cercare \"Servizio di Wechat Ufficiale di Clever Dog\" e quindi interessati.</string>
+  <string name="Start_instructions_C">1. Si prega di prestare attenzione al numero pubblico WeChat \"加菲狗官微服务\"</string>
+  <string name="Start_instructions_D">Metodo 1: fare clic sul WeChat nell\'angolo in alto a destra della casella \"+\"> Aggiungi contatti> Account ufficiali, cercare \"加菲狗官微服务\" e quindi interessati.</string>
   <string name="Start_instructions_E">Metodo 2: schermata di questa pagina o salvare il seguente codice bidimensionale nell\'album, nello spazzare WeChat spazzare attenzione.</string>
   <string name="Start_instructions_F">2. Contabile</string>
-  <string name="Start_instructions_G">Attenzione \"Servizio di Wechat Ufficiale di Clever Dog\" account ufficiali, entra nella pagina principale, fai clic sulla barra dei menu del servizio, seleziona l\'account di associazione.</string>
+  <string name="Start_instructions_G">Attenzione \"加菲狗官微服务\" account ufficiali, entra nella pagina principale, fai clic sulla barra dei menu del servizio, seleziona l\'account di associazione.</string>
   <string name="Start_instructions_H">Bind account</string>
   <string name="Start_instructions_I">Si prega di inserire Clever dog email per legare, come dimenticare la password, vai al client Clever Dog Back</string>
   <string name="Switch_Mode">Si prega di passare alla modalità diretta per visualizzare i contenuti di ripresa</string>
@@ -672,9 +679,9 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">La videocamera è durante il periodo sicuro di standby sicuro, per accendere al Timelapse serve la disattivazione della modalità di standby sicuro, conferma la disattivazione?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Disattivazione confermata</string>
   <string name="Tap1_CameraFun_Timelapse_document">Usando il Timelapse si cattureranno più momenti meravigliosi</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s ore</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">% ore</string>
   <string name="Tap1_CameraFun_UninitializedTips">Errore in lettura SD Card</string>
-  <string name="Tap1_CameraFun_VideoDirection">Inverso (Immagine rovesciata)</string>
+  <string name="Tap1_CameraFun_VideoDirection">Immagine rovesciata(Inverso)</string>
   <string name="Tap1_Camera_BackLiveTips">Torna In diretta</string>
   <string name="Tap1_Camera_Front">Davanti</string>
   <string name="Tap1_Camera_FrontTips">La visualizzazione panoramica ha bisogno di un\'ampio angolo di visione davanti alla macchina fotografica</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">Bassa potenza, carica nel tempo.</string>
   <string name="Tap1_Magnetism_ClearRecord">Cancellare la registrazione</string>
   <string name="Tap1_Magnetism_Setting_Notify">Avvisami quando è aperta/chiuso</string>
+  <string name="Tap1_Menu_More">Più</string>
   <string name="Tap1_NeedsInitializedTips">Esigenze scheda SD per inizializzare e dati sarebbero stati cancellati, sicuro di continuare?</string>
   <string name="Tap1_NewFirmware">Nuovi firmware</string>
   <string name="Tap1_NoMessages">Nessun messaggio</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">Screenshot della diretta</string>
   <string name="Tap2_Timelapse_title">Timelapse</string>
   <string name="Tap2_TitleName">Splendida della giornata</string>
+  <string name="Tap2_TitleName_Sentence">Splendida della giornata</string>
   <string name="Tap2_share_sharevideo">Condividere un video con te</string>
   <string name="Tap2_share_sharevideo_tips">Ho fatto un video Timelapse con la videocamera intelligente, controllare</string>
   <string name="Tap2_share_unabletoshare">No wechat installato, in grado di condividere.</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">Dispositivo non trovato.</string>
   <string name="Tap3_ShareDevice_NoShare">Non è stato condiviso</string>
   <string name="Tap3_ShareDevice_NoneFriends">Nessuna</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">Nessuna</string>
   <string name="Tap3_ShareDevice_NotYourself">Non condividere</string>
   <string name="Tap3_ShareDevice_Shared">Condivisa</string>
   <string name="Tap3_ShareDevice_SharedContents">contenuti condivisi</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">Aiuto</string>
   <string name="Unconnect_Network">Il tuo dispositivo non è connesso a una rete mobile oa una rete Wi&#8211;Fi</string>
   <string name="VALID_STORAGE">Memoria libera</string>
+  <string name="VIDEO_FirmwareUpdating">Aggiornamento firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Sto caricando</string>
   <string name="VIDEO_SD_DESC">L\'SD card deve essere inizializzata per memorizzare video.</string>
   <string name="WARN_TIME">Tempo d\'avvertimento</string>
