--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">Ao detectar anormalidade, o dispositivo irá soar</string>
   <string name="Added_successfully">Bind com sucesso</string>
   <string name="Alarm_WeChat">O Wechat pode receber a notícia de alarme.</string>
+  <string name="Alarm_WeChat_NoBindTips">Usando esta função precisa ligar o email primeiro.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">Limpar cache de mensagens</string>
   <string name="CODE_ERR">Código de verificação inválido</string>
   <string name="COMFIRM_NEW_PASS">Confirmar nova senha</string>
-  <string name="CONNECTING">Alguém está visualizando. Conexão simultânea impossível</string>
+  <string name="CONNECTING">O dispositivo não responde. Por favor tente novamente</string>
   <string name="CONNECTING_1">Conectando à rede</string>
   <string name="CONN_INTERRUPTED">Conexão interrompida. Verifique a rede da câmera</string>
   <string name="CREATING">Adicionando. Aguarde&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">Sons</string>
   <string name="DOOR_WIFI_HINT">Descrição do status do dispositivo</string>
   <string name="DailyGreatTips_Full">Número da coleção de Show Diário atingiu o limite superior de 50, vai para apagar?</string>
+  <string name="Daily_Great_NO_CONTENTS">Sem conteúdo</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Excluir compartilhamento?</string>
   <string name="Device_Disconnected">Desconectado</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">Deslize para mais conteúdo</string>
   <string name="GetCode_FrequentlyTips">Operações com demasiada frequência, tente novamente 10 minutos depois.</string>
   <string name="GetWifiList_FaiTips">1.Permitir aplicação para obter a permissão \"Location\" \n 2.Ligue \"GPS\".</string>
+  <string name="H5_Asteroid">Asteróide</string>
+  <string name="H5_Fisheye">Olho de peixe</string>
+  <string name="H5_Panoramic">panorâmico</string>
+  <string name="H5_VR_mode">Modo VR</string>
   <string name="HOME">Página inicial</string>
   <string name="HOUR">H</string>
   <string name="HOURS">24 horas</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">Azul acesa:3G/4G on&#8211;line</string>
   <string name="LIGTH_LABEL_2_1">Piscando:A bateria está fraca</string>
   <string name="LIGTH_LABEL_2_2">Azul acesa:estado normal</string>
+  <string name="LIVE_DATA">Para celular, observe o uso de dados</string>
   <string name="LOADING">Carregando&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">No Phone, em \"Ajustes\", \"Notificações\", ative notificações do %s</string>
   <string name="LOCATION">O nome de localização:</string>
@@ -408,7 +415,7 @@
   <string name="RECORD_INFO_1">Habilitar gravação por 24 horas</string>
   <string name="RECORD_INFO_2">Desabilitar gravação a qualquer hora</string>
   <string name="RECORD_MODE">Ao detectar movimento</string>
-  <string name="RECORD_MODE_1">24 horas</string>
+  <string name="RECORD_MODE_1">Dia todo</string>
   <string name="RECORD_MODE_2">Nunca</string>
   <string name="RECORD_MODE_CHANGE">Posição atual como \"Em casa\", sensor de movimento está desligado. Se realmente quer ativar, por favor continue</string>
   <string name="RECORD_NO_FIND">Não há vídeo deste período</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">Salvando ajustes&#8230;</string>
   <string name="SETTINGS">Ajustes</string>
   <string name="SETTINGS_1">Ajustes</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">Desligar não vai receber mais mensagens empurradas. Se quiser se desvincular, por favor vá ao Wechat e cancele o seguimento do número público\"serviço do wechat de Clever Dog\".</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Concentre&#8211;se na conta WeChat \"serviço do wechat de Clever Dog\" e vincule, depois que o sucesso da antiga conta WeChat não receberá mais a mensagem push</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Desligar não vai receber mais mensagens empurradas. Se quiser se desvincular, por favor vá ao Wechat e cancele o seguimento do número público\"加菲狗官微服务\".</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Concentre&#8211;se na conta WeChat \"加菲狗官微服务\" e vincule, depois que o sucesso da antiga conta WeChat não receberá mais a mensagem push</string>
   <string name="SETTING_DIRECTION">Direção do vídeo</string>
   <string name="SETTING_FREE">Ajustar sensor de movimento e alertas de cada dispositivo</string>
-  <string name="SETTING_RECORD">Gravação automática</string>
+  <string name="SETTING_RECORD">Configurações de vídeo</string>
   <string name="SETTING_SD">Cartão microSD</string>
   <string name="SETTING_TIMEZONE">Fuso horário</string>
   <string name="SET_NEW_PWD">Definir nova senha</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">Abra as instruções</string>
   <string name="Start_instructions_A">Nas Contas Oficiais do WeChat no e&#8211;mail vinculativo Clever Dog, você pode abrir esta função.</string>
   <string name="Start_instructions_B">Proceda da seguinte forma:</string>
-  <string name="Start_instructions_C">1. Por favor, preste atenção ao número público do WeChat \"serviço do wechat de Clever Dog\"</string>
-  <string name="Start_instructions_D">Método 1: clique no WeChat no canto superior direito do \"+\"> Adicionar contatos> Contas oficiais, pesquise \"serviço do wechat de Clever Dog\" e depois em questão.</string>
+  <string name="Start_instructions_C">1. Por favor, preste atenção ao número público do WeChat \"加菲狗官微服务\"</string>
+  <string name="Start_instructions_D">Método 1: clique no WeChat no canto superior direito do \"+\"> Adicionar contatos> Contas oficiais, pesquise \"加菲狗官微服务\" e depois em questão.</string>
   <string name="Start_instructions_E">Método 2: captura de tela desta página ou salve o seguinte código bidimensional no álbum, na atenção de varredura WeChat varredura.</string>
   <string name="Start_instructions_F">2. Ligue a conta</string>
-  <string name="Start_instructions_G">Atenção \"serviço do wechat de Clever Dog\", entre na página principal, clique na barra de menu do serviço, selecione a conta obrigatória.</string>
+  <string name="Start_instructions_G">Atenção \"加菲狗官微服务\", entre na página principal, clique na barra de menu do serviço, selecione a conta obrigatória.</string>
   <string name="Start_instructions_H">Ligar conta</string>
   <string name="Start_instructions_I">Digite a conta de e&#8211;mail do telefone inteligente para se ligar, como esquecer a senha, vá para o cliente do cão inteligente, de volta</string>
   <string name="Switch_Mode">Mude para o modo direto para ver o conteúdo de filmagem</string>
@@ -672,9 +679,9 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">O dispositivo está em suspensão no modo de segurança. Para o modo de fotografia em time&#8211;lapse, é necessário desativar o modo de segurança. Confirma?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Confirmo</string>
   <string name="Tap1_CameraFun_Timelapse_document">Descubra seus momentos com fotografia em time&#8211;lapse.</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s hora(s)</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%hora(s)</string>
   <string name="Tap1_CameraFun_UninitializedTips">Falha na leitura do cartão microSD</string>
-  <string name="Tap1_CameraFun_VideoDirection">Invertido (de cabeça pra baixo)</string>
+  <string name="Tap1_CameraFun_VideoDirection">de cabeça pra baixo(Invertido)</string>
   <string name="Tap1_Camera_BackLiveTips">De volta a Ao vivo</string>
   <string name="Tap1_Camera_Front">Frente</string>
   <string name="Tap1_Camera_FrontTips">A visualização com ângulo horizontal precisa manter uma visão ampla na frente da câmera</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">Baixa potência, por favor cobrar no tempo.</string>
   <string name="Tap1_Magnetism_ClearRecord">Clarear o recorde</string>
   <string name="Tap1_Magnetism_Setting_Notify">Notifique&#8211;me quando é aberto/fechado</string>
+  <string name="Tap1_Menu_More">Mais</string>
   <string name="Tap1_NeedsInitializedTips">Cartão SD precisa ser inicializado e os dados seriam limpos, com certeza continuar?</string>
   <string name="Tap1_NewFirmware">Novo firmware</string>
   <string name="Tap1_NoMessages">Nenhuma mensagem</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">Captura de tela ao vivo</string>
   <string name="Tap2_Timelapse_title">Fotografia em time&#8211;lapse</string>
   <string name="Tap2_TitleName">Show Diário</string>
+  <string name="Tap2_TitleName_Sentence">Show Diário</string>
   <string name="Tap2_share_sharevideo">Eu compartilhei um vídeo com você</string>
   <string name="Tap2_share_sharevideo_tips">Fiz umas fotos em time&#8211;lapse usando a câmera Clever Dog. Dá uma olhada!</string>
   <string name="Tap2_share_unabletoshare">WeChat não instalado. Impossível compartilhar</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">Nenhum dispositivo ainda</string>
   <string name="Tap3_ShareDevice_NoShare">Not sido compartilhadas</string>
   <string name="Tap3_ShareDevice_NoneFriends">Nenhum</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">Nenhum</string>
   <string name="Tap3_ShareDevice_NotYourself">Impossível compartilhar consigo próprio</string>
   <string name="Tap3_ShareDevice_Shared">Compartilhado</string>
   <string name="Tap3_ShareDevice_SharedContents">Conteúdo compartilhados</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">Ajuda</string>
   <string name="Unconnect_Network">Seu dispositivo não está conectado a uma rede móvel ou a uma rede Wi&#8211;Fi</string>
   <string name="VALID_STORAGE">Armazenamento</string>
+  <string name="VIDEO_FirmwareUpdating">Atualização de Firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Carregando. Por favor aguarde&#8230;</string>
   <string name="VIDEO_SD_DESC">Formatação do cartão microSD é necessária para gravar vídeos</string>
   <string name="WARN_TIME">Período de alarme</string>
