--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">Выберите звуковой сигнал, который будет воспроизводиться при обнаружении движения</string>
   <string name="Added_successfully">Привязать успешно</string>
   <string name="Alarm_WeChat">Mensaje de advertencia recibido por WeChat</string>
+  <string name="Alarm_WeChat_NoBindTips">С помощью этой функции необходимо связать электронную почту в первую очередь.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">Очистить кэш</string>
   <string name="CODE_ERR">Пожалуйста, введите верный пароль</string>
   <string name="COMFIRM_NEW_PASS">Снова введите новый пароль</string>
-  <string name="CONNECTING">Кто&#8211;то уже смотрит live video</string>
+  <string name="CONNECTING">Нет ответа, пожалуйста, попробуйте еще раз</string>
   <string name="CONNECTING_1">Подключение к интернету, пожалуйста, подождите</string>
   <string name="CONN_INTERRUPTED">Соединение прервано, пожалуйста, проверьте подключение веб&#8211;камеры</string>
   <string name="CREATING">Загрузка&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">Голос</string>
   <string name="DOOR_WIFI_HINT">Светодиодный индикатор состояния</string>
   <string name="DailyGreatTips_Full">Число коллекции Ежедневное чудо достиг верхнего предела 50, собирается удалять?</string>
+  <string name="Daily_Great_NO_CONTENTS">Без содержания</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Удалить общий доступ?</string>
   <string name="Device_Disconnected">Отключен</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">Слайд, \n показать больше информации </string>
   <string name="GetCode_FrequentlyTips">Слишком часто операции, попробуйте еще раз 10 минут позже.</string>
   <string name="GetWifiList_FaiTips">1.Разрешить app получить \"Location\" разрешения \n 2.Включите \"GPS\" на.</string>
+  <string name="H5_Asteroid">астероид</string>
+  <string name="H5_Fisheye">Рыбий</string>
+  <string name="H5_Panoramic">панорамный</string>
+  <string name="H5_VR_mode">Режим VR</string>
   <string name="HOME">Главная</string>
   <string name="HOUR">H</string>
   <string name="HOURS">Круглосуточно</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">Горит голубая лампочка, 3G/4G подключен</string>
   <string name="LIGTH_LABEL_2_1">мигающая лампочка,Заряда батареи низкий</string>
   <string name="LIGTH_LABEL_2_2">Горит голубая лампочка, нормальная подача электричества </string>
+  <string name="LIVE_DATA">Для сотовой связи обратите внимание на использование данных</string>
   <string name="LOADING">Загрузка&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">Пожалуйста, через настройки&#8211;уведомления на вашем Phone, найдите %s и откройте уведомления</string>
   <string name="LOCATION">Местоположение:</string>
@@ -408,7 +415,7 @@
   <string name="RECORD_INFO_1">Запись 24 часа</string>
   <string name="RECORD_INFO_2">Не ведется видеозапись</string>
   <string name="RECORD_MODE">Обнаружение движения</string>
-  <string name="RECORD_MODE_1">24 часа</string>
+  <string name="RECORD_MODE_1">Весь день</string>
   <string name="RECORD_MODE_2">Никогда</string>
   <string name="RECORD_MODE_CHANGE">Сейчас ваше расположение находится \"дома\",обнаружение движения выключено, если вам нужно обнаружение, пожалуйста, продолжайте</string>
   <string name="RECORD_NO_FIND">Записи не найдены</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">Установка&#8230;</string>
   <string name="SETTINGS">Параметры</string>
   <string name="SETTINGS_1">Параметры</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">WeChat сообщения не доставят при закрытии. Перейтите к WeChat и перестаньте следить за официальным аккаунтом \"Clever dog Официальный WeChat Сервис\" если хотите отменить привязку.</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Пожалуйста, сосредоточьтесь на учетной записи WeChat \"Clever dog Официальный WeChat Сервис\" и свяжите ее, после того как успех старой учетной записи WeChat больше не получит сообщение push</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">WeChat сообщения не доставят при закрытии. Перейтите к WeChat и перестаньте следить за официальным аккаунтом \"加菲狗官微服务\" если хотите отменить привязку.</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Пожалуйста, сосредоточьтесь на учетной записи WeChat \"加菲狗官微服务\" и свяжите ее, после того как успех старой учетной записи WeChat больше не получит сообщение push</string>
   <string name="SETTING_DIRECTION">Кадр</string>
   <string name="SETTING_FREE">Установить обнаружение движения и сигнализацию</string>
-  <string name="SETTING_RECORD">Запись видео</string>
+  <string name="SETTING_RECORD">Настройки видео</string>
   <string name="SETTING_SD">Карта microSD</string>
   <string name="SETTING_TIMEZONE">Часовой пояс</string>
   <string name="SET_NEW_PWD">Установить новый пароль</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">Откройте инструкции</string>
   <string name="Start_instructions_A">В официальных учетных записях WeChat в обязательной электронной почте Clever Dog вы можете открыть эту функцию.</string>
   <string name="Start_instructions_B">Действуйте следующим образом:</string>
-  <string name="Start_instructions_C">1. Пожалуйста, обратите внимание на общедоступный номер WeChat \"Clever dog Официальный WeChat Сервис\"</string>
-  <string name="Start_instructions_D">Способ 1: нажмите WeChat в верхнем правом углу \"+\"> \"Добавить контакты\"> \"Официальные счета\", выполните поиск \"Clever dog Официальный WeChat Сервис\", а затем заинтересованы.</string>
+  <string name="Start_instructions_C">1. Пожалуйста, обратите внимание на общедоступный номер WeChat \"加菲狗官微服务\"</string>
+  <string name="Start_instructions_D">Способ 1: нажмите WeChat в верхнем правом углу \"+\"> \"Добавить контакты\"> \"Официальные счета\", выполните поиск \"加菲狗官微服务\", а затем заинтересованы.</string>
   <string name="Start_instructions_E">Способ 2: снимок экрана с этой страницы или сохранение в альбоме следующего двухмерного кода, в развертке WeChat.</string>
   <string name="Start_instructions_F">2. Счет привязки</string>
-  <string name="Start_instructions_G">Внимание \"Clever dog Официальный WeChat Сервис\", войдите в основную страницу, щелкните строку меню службы, выберите обязательную учетную запись.</string>
+  <string name="Start_instructions_G">Внимание \"加菲狗官微服务\", войдите в основную страницу, щелкните строку меню службы, выберите обязательную учетную запись.</string>
   <string name="Start_instructions_H">Связать счет</string>
   <string name="Start_instructions_I">Пожалуйста, введите Умный телефон электронной почты для привязки, например, забудьте пароль, пожалуйста, перейдите к клиенту Clever dog back</string>
   <string name="Switch_Mode">Перейдите в режим прямого просмотра для просмотра</string>
@@ -672,9 +679,9 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Необходимо отключить режим ожидания, прежде чем заданный промежуток времени фотографирования, конечно?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Подтверждаю</string>
   <string name="Tap1_CameraFun_Timelapse_document">Получить больше интересных моментов с цикличной съемкой</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s часов</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">% часов</string>
   <string name="Tap1_CameraFun_UninitializedTips">Неудачная идентификация Micro SD карты</string>
-  <string name="Tap1_CameraFun_VideoDirection">Перевёртка (перевернутая картинка)</string>
+  <string name="Tap1_CameraFun_VideoDirection">перевернутая картинка (Перевёртка)</string>
   <string name="Tap1_Camera_BackLiveTips">Вернуться к Прямая трансляция</string>
   <string name="Tap1_Camera_Front">Фронт</string>
   <string name="Tap1_Camera_FrontTips">Просмотр с горизонтальным углом должен держать широкий видение перед камерой</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">Низкая мощность, пожалуйста, зарядите вовремя.</string>
   <string name="Tap1_Magnetism_ClearRecord">Очистить отчет</string>
   <string name="Tap1_Magnetism_Setting_Notify">Сообщите мне, когда оно открыто/закрыто</string>
+  <string name="Tap1_Menu_More">Больше</string>
   <string name="Tap1_NeedsInitializedTips">потребности карты SD для инициализации и данные будут очищены, обязательно продолжить?</string>
   <string name="Tap1_NewFirmware">Новая прошивка</string>
   <string name="Tap1_NoMessages">Нет сообщений</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">Скриншот прямой трансляции</string>
   <string name="Tap2_Timelapse_title">Цикличная фотография</string>
   <string name="Tap2_TitleName">Ежедневное чудо</string>
+  <string name="Tap2_TitleName_Sentence">Ежедневное чудо</string>
   <string name="Tap2_share_sharevideo">Я поделился с вами видео</string>
   <string name="Tap2_share_sharevideo_tips">Я сделал замедленной киносъемки ловкими Dog Smart Camera, проверить это!</string>
   <string name="Tap2_share_unabletoshare">Ни один WeChat не установлен, не могу разделить.</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">Устройство не добавлено</string>
   <string name="Tap3_ShareDevice_NoShare">Не было общим</string>
   <string name="Tap3_ShareDevice_NoneFriends">Никто</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">Никто</string>
   <string name="Tap3_ShareDevice_NotYourself">Невозможно поделиться себе</string>
   <string name="Tap3_ShareDevice_Shared">Общий</string>
   <string name="Tap3_ShareDevice_SharedContents">Общие cодержание</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">Помощь</string>
   <string name="Unconnect_Network">Ваше устройство не подключено к мобильной сети или сети Wi&#8211;Fi</string>
   <string name="VALID_STORAGE">Объём памяти</string>
+  <string name="VIDEO_FirmwareUpdating">Обновление прошивки&#8230;</string>
   <string name="VIDEO_REFRESHING">Идет загрузка, пожалуйста подождите</string>
   <string name="VIDEO_SD_DESC">Необходимо инициализировать карту microSD, после этого будет возможно сохранение видеозаписей</string>
   <string name="WARN_TIME">Время сигнала</string>
