--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">侦测到异常时，设备将播放声音</string>
   <string name="Added_successfully">绑定成功</string>
   <string name="Alarm_WeChat">微信接收报警消息</string>
+  <string name="Alarm_WeChat_NoBindTips">使用此功能需要绑定手机/邮箱</string>
   <string name="Apr">4月</string>
   <string name="Aug">8月</string>
   <string name="BACK">返回</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">清空消息缓存</string>
   <string name="CODE_ERR">请输入有效的验证码</string>
   <string name="COMFIRM_NEW_PASS">确认新密码</string>
-  <string name="CONNECTING">正在连接中，不可多人同时查看</string>
+  <string name="CONNECTING">设备无响应，请重试</string>
   <string name="CONNECTING_1">正在连接网络，请稍后</string>
   <string name="CONN_INTERRUPTED">连接中断，请检查摄像头网络</string>
   <string name="CREATING">正在创建，请稍候&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">声音</string>
   <string name="DOOR_WIFI_HINT">设备指示灯状态说明</string>
   <string name="DailyGreatTips_Full">每日精彩收藏数量已达50条上限，是否前去删除？</string>
+  <string name="Daily_Great_NO_CONTENTS">暂无精彩内容</string>
   <string name="Dec">12月</string>
   <string name="Delete_Share">是否删除分享</string>
   <string name="Device_Disconnected">对端断开</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">滑一滑，\n显示更多内容</string>
   <string name="GetCode_FrequentlyTips">操作过于频繁，请10分钟后重试</string>
   <string name="GetWifiList_FaiTips">1.允许客户端获取“位置信息”权限 \n 2.打开“GPS”开关</string>
+  <string name="H5_Asteroid">小行星</string>
+  <string name="H5_Fisheye">鱼眼</string>
+  <string name="H5_Panoramic">全景</string>
+  <string name="H5_VR_mode">VR模式</string>
   <string name="HOME">主页</string>
   <string name="HOUR">时</string>
   <string name="HOURS">全天提示</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">蓝色常亮，3G/4G在线</string>
   <string name="LIGTH_LABEL_2_1">闪烁，电量较低</string>
   <string name="LIGTH_LABEL_2_2">蓝色常亮，已正常通电</string>
+  <string name="LIVE_DATA">非WiFi网络，请注意流量消耗</string>
   <string name="LOADING">加载中&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">请在手机设置－通知页，找到“%s”，开启“允许通知”</string>
   <string name="LOCATION">位置名称：</string>
@@ -407,8 +414,8 @@
   <string name="RECORD_INFO_0">移动侦测到异常时启用录像，待画面恢复正常时停止</string>
   <string name="RECORD_INFO_1">24小时启用录像</string>
   <string name="RECORD_INFO_2">任何时候都不启用录像</string>
-  <string name="RECORD_MODE">侦测到异常时</string>
-  <string name="RECORD_MODE_1">24小时</string>
+  <string name="RECORD_MODE">侦测报警录像</string>
+  <string name="RECORD_MODE_1">全天</string>
   <string name="RECORD_MODE_2">从不</string>
   <string name="RECORD_MODE_CHANGE">当前位置为回家模式，移动侦测已关闭，如需开启，请修改模式</string>
   <string name="RECORD_NO_FIND">没有此时间段的视频</string>
@@ -512,10 +519,10 @@
   <string name="SETTINGS">设置</string>
   <string name="SETTINGS_1">功能设置</string>
   <string name="SETTINGS_Wechat_Switch_Cancel">关闭将无法接收微信推送。想取消绑定请前往微信取消关注“加菲狗官微服务”公众号。</string>
-  <string name="SETTINGS_Wechat_Switch_Open">请在新的微信号上关注"加菲狗官微服务"并绑定，成功后旧的微信号将不再接收消息推送</string>
+  <string name="SETTINGS_Wechat_Switch_Open">请在新的微信号上关注“加菲狗官微服务”并绑定，成功后旧的微信号将不再接收消息推送</string>
   <string name="SETTING_DIRECTION">视频方向</string>
   <string name="SETTING_FREE">随意设置单个设备的移动侦测及报警</string>
-  <string name="SETTING_RECORD">自动录像</string>
+  <string name="SETTING_RECORD">录像设置</string>
   <string name="SETTING_SD">Micro SD卡</string>
   <string name="SETTING_TIMEZONE">设备时区</string>
   <string name="SET_NEW_PWD">设置新密码</string>
@@ -569,8 +576,8 @@
   <string name="Start_instructions_A">在微信公众号里绑定加菲狗手机/邮箱，即可开启此功能。</string>
   <string name="Start_instructions_B">步骤如下：</string>
   <string name="Start_instructions_C">1. 请先关注微信公众号“加菲狗官微服务”</string>
-  <string name="Start_instructions_D">方法一：点击微信右上角的“+”号 > 添加朋友 > 公众号，搜索 “加菲狗官微服务”然后关注。</string>
-  <string name="Start_instructions_E">方法二：截图此页面，在微信 里扫一扫关注。</string>
+  <string name="Start_instructions_D">方法一：点击微信右上角的“+”号 > 添加朋友 > 公众号，搜索“加菲狗官微服务”然后关注。</string>
+  <string name="Start_instructions_E">方法二：截图此页面，在微信里扫一扫关注。</string>
   <string name="Start_instructions_F">2. 绑定账号</string>
   <string name="Start_instructions_G">关注“加菲狗官微服务”公众号后，进入主页面，点击菜单栏的“服务”，选择“绑定账号”。</string>
   <string name="Start_instructions_H">绑定账号</string>
@@ -646,7 +653,7 @@
   <string name="Tap1_Album_Share_To_Daily_Great">分享的内容将会保存到“每日精彩”</string>
   <string name="Tap1_BigPic_FavoriteTips">收藏图片将展现在「每日精彩」</string>
   <string name="Tap1_CameraFun_Standby">待机</string>
-  <string name="Tap1_CameraFun_Standby_Description">开启待机，设备将进入休眠状态，查看直播、历史视频、安全防护及报警、自动录像、延时摄影等功能将无法使用</string>
+  <string name="Tap1_CameraFun_Standby_Description">开启待机，设备将进入休眠状态，查看直播、历史视频、安全防护及报警、录像设置、延时摄影等功能将无法使用</string>
   <string name="Tap1_CameraFun_Standby_OnTips">延时摄影拍摄中，无法进入待机。</string>
   <string name="Tap1_CameraFun_Timelapse">延时摄影</string>
   <string name="Tap1_CameraFun_Timelapse_Countdown">剩余时间</string>
@@ -672,16 +679,16 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">摄像头安全待机中，开启延时摄影，需关闭安全待机，是否确认关闭？</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">确认关闭</string>
   <string name="Tap1_CameraFun_Timelapse_document">开启延时摄影，更多精彩纷呈</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s小时</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%小时</string>
   <string name="Tap1_CameraFun_UninitializedTips">Micro SD卡读写失败</string>
-  <string name="Tap1_CameraFun_VideoDirection">倒挂（画面翻转）</string>
+  <string name="Tap1_CameraFun_VideoDirection">图像翻转 (倒挂)</string>
   <string name="Tap1_Camera_BackLiveTips">点击返回直播</string>
   <string name="Tap1_Camera_Front">平视</string>
   <string name="Tap1_Camera_FrontTips">以平视的视角查看，需要保持摄像头前方视野开阔</string>
   <string name="Tap1_Camera_Greetings">日出日落、云彩变换、家庭生活、Baby成长&#8230;每天都有精彩和成长，每一刻都值得被记录</string>
   <string name="Tap1_Camera_Messages">消息</string>
   <string name="Tap1_Camera_Messages_ViewTheVideo">查看视频</string>
-  <string name="Tap1_Camera_MotionDetection_OffTips">关闭“移动侦测”，将停止“侦测到异常时”自动录像</string>
+  <string name="Tap1_Camera_MotionDetection_OffTips">关闭“移动侦测”，将停止“移动侦测报警录像”</string>
   <string name="Tap1_Camera_NoSDCardTips">未检测到SD卡</string>
   <string name="Tap1_Camera_Overlook">俯视</string>
   <string name="Tap1_Camera_OverlookTips">以从上往下的视角查看，需要将摄像头放置于高处</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">电池电量低，请及时充电</string>
   <string name="Tap1_Magnetism_ClearRecord">清空开关记录</string>
   <string name="Tap1_Magnetism_Setting_Notify">开/关时通知我</string>
+  <string name="Tap1_Menu_More">更多</string>
   <string name="Tap1_NeedsInitializedTips">设备SD卡需要先初始化，但会删除卡内数据，确定初始化吗？</string>
   <string name="Tap1_NewFirmware">新固件</string>
   <string name="Tap1_NoMessages">无消息</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">直播截图</string>
   <string name="Tap2_Timelapse_title">延时摄影</string>
   <string name="Tap2_TitleName">每日精彩</string>
+  <string name="Tap2_TitleName_Sentence">每日精彩</string>
   <string name="Tap2_share_sharevideo">分享了一段影片给你</string>
   <string name="Tap2_share_sharevideo_tips">我用看家王智能摄像机拍摄了一段延时摄影，快来看看吧</string>
   <string name="Tap2_share_unabletoshare">手机没有安装微信，无法分享</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">还没有设备哦</string>
   <string name="Tap3_ShareDevice_NoShare">暂未分享</string>
   <string name="Tap3_ShareDevice_NoneFriends">暂未添加亲友</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">暂无可分享亲友</string>
   <string name="Tap3_ShareDevice_NotYourself">无法分享设备给自己</string>
   <string name="Tap3_ShareDevice_Shared">已分享</string>
   <string name="Tap3_ShareDevice_SharedContents">已分享内容</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">使用帮助</string>
   <string name="Unconnect_Network">您的设备未连接移动网络，或Wi&#8211;Fi网络</string>
   <string name="VALID_STORAGE">存储空间</string>
+  <string name="VIDEO_FirmwareUpdating">固件升级中&#8230;</string>
   <string name="VIDEO_REFRESHING">正在加载，请稍后</string>
   <string name="VIDEO_SD_DESC">Micro SD卡需要初始化，才能存储视频</string>
   <string name="WARN_TIME">报警时间段</string>
