--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">Choose the Audio alert to be played when motion is detected</string>
   <string name="Added_successfully">Bind successfully</string>
   <string name="Alarm_WeChat">Alarm via WeChat</string>
+  <string name="Alarm_WeChat_NoBindTips">Using this function needs to bind email first.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -63,7 +64,7 @@
   <string name="CLEAR_DATA">Clear messages cache</string>
   <string name="CODE_ERR">Invalid code</string>
   <string name="COMFIRM_NEW_PASS">Retype new Password</string>
-  <string name="CONNECTING">Have someone watching live video</string>
+  <string name="CONNECTING">No response, please try again</string>
   <string name="CONNECTING_1">Connecting</string>
   <string name="CONN_INTERRUPTED">Connecting to network</string>
   <string name="CREATING">Adding&#8230;</string>
@@ -149,6 +150,7 @@
   <string name="DOOR_VOICE">Voice</string>
   <string name="DOOR_WIFI_HINT">LED Status Indicator</string>
   <string name="DailyGreatTips_Full">Collection\'s number of Daily Great has reached the upper limit 50, going to delete?</string>
+  <string name="Daily_Great_NO_CONTENTS">No content</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Delete share?</string>
   <string name="Device_Disconnected">Disconnected</string>
@@ -186,7 +188,7 @@
   <string name="EFAMILY_RELEVANCE_DOOR">Associated doorbell</string>
   <string name="EFAMILY_VIDEOCALLING1">Calling&#8230;</string>
   <string name="EMAIL">E&#8211;mail</string>
-  <string name="EMAIL_1">E&#8211;mail adress</string>
+  <string name="EMAIL_1">E&#8211;mail address</string>
   <string name="EMAIL_2">Invalid E&#8211;mail</string>
   <string name="EMAIL_RESET_PWD">Already emailed to %s, please click the link in the email to reset password</string>
   <string name="EMAIL_SIGNUP">E&#8211;mail</string>
@@ -203,7 +205,7 @@
   <string name="EQUIPMENT_NAME">Device Name</string>
   <string name="EQUIPMENT_NAME_1">Device Name:</string>
   <string name="ERR_CODE">Error code</string>
-  <string name="EVERY_DAY">All day</string>
+  <string name="EVERY_DAY">Everyday</string>
   <string name="EXPECT">Coming soon, please expect.</string>
   <string name="EXPERIENCE">Experience</string>
   <string name="FEEDBACK">Feedback</string>
@@ -233,6 +235,10 @@
   <string name="GUIDE_INFO">Sliding，\nshow more</string>
   <string name="GetCode_FrequentlyTips">Too frequently operations, please try again 10 mins later.</string>
   <string name="GetWifiList_FaiTips">1.Allow app to get the \"Location\" permission. \n 2.Turn \"GPS\" on.</string>
+  <string name="H5_Asteroid">Asteroid</string>
+  <string name="H5_Fisheye">Fisheye</string>
+  <string name="H5_Panoramic">Panoramic</string>
+  <string name="H5_VR_mode">VR mode</string>
   <string name="HOME">Home</string>
   <string name="HOUR">H</string>
   <string name="HOURS">24 hours</string>
@@ -271,6 +277,7 @@
   <string name="LIGTH_LABEL_1_2">Blue light, 3G/4G Online</string>
   <string name="LIGTH_LABEL_2_1">Blinking,Battery is less</string>
   <string name="LIGTH_LABEL_2_2">Blue light, Have electricity</string>
+  <string name="LIVE_DATA">For cellular,please note your data usage</string>
   <string name="LOADING">Loading&#8230;</string>
   <string name="LOCAL_NOTIFICATION_AndroidMSG">Please go to Phone\'s \"Settings\"&#8211;\"Notifications\", find %s and open \'Notifications\'</string>
   <string name="LOCATION">Location:</string>
@@ -407,8 +414,8 @@
   <string name="RECORD_INFO_0">Device will record video when motion deteced and will stop recording when it goes normal.</string>
   <string name="RECORD_INFO_1">Recording video in 24 hours</string>
   <string name="RECORD_INFO_2">Never record video</string>
-  <string name="RECORD_MODE">When Motion detected</string>
-  <string name="RECORD_MODE_1">24 Hours</string>
+  <string name="RECORD_MODE">Detect alarm video</string>
+  <string name="RECORD_MODE_1">All day</string>
   <string name="RECORD_MODE_2">Never</string>
   <string name="RECORD_MODE_CHANGE">The current location is \"at home\" and motion detection closed. If you need it,please change the mode.</string>
   <string name="RECORD_NO_FIND">No video in this time period</string>
@@ -496,7 +503,7 @@
   <string name="SD_NO">No card</string>
   <string name="SD_NORMAL">Normal</string>
   <string name="SECOND">%d second</string>
-  <string name="SECURE">Protection</string>
+  <string name="SECURE">Security</string>
   <string name="SECURE_ALARM_CLOSE">When Protection is off, it will not record video when \"motion detected\"</string>
   <string name="SECURE_SENSITIVITY">Sensitivity</string>
   <string name="SECURE_TYPE">Motion Detection</string>
@@ -511,11 +518,11 @@
   <string name="SETTING">Setting&#8230;</string>
   <string name="SETTINGS">Settings</string>
   <string name="SETTINGS_1">Settings</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">If closed, it cannot receive WeChat push. Unbinding it by unfollowing \“Clever Dog WeChat Official Account\”.</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Please focus on the WeChat account \"Clever Dog WeChat Official Account\" and bind, after the success of the old WeChat account will no longer receive the message push</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">If closed, it cannot receive WeChat push. Unbinding it by unfollowing \“加菲狗官微服务\”.</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Please focus on the WeChat account \"加菲狗官微服务\" and bind, after the success of the old WeChat account will no longer receive the message push</string>
   <string name="SETTING_DIRECTION">Video direction</string>
   <string name="SETTING_FREE">Set alarm and motion detector of individual device</string>
-  <string name="SETTING_RECORD">Video Recording</string>
+  <string name="SETTING_RECORD">Video settings</string>
   <string name="SETTING_SD">Micro SD card</string>
   <string name="SETTING_TIMEZONE">Time zone</string>
   <string name="SET_NEW_PWD">Set new password</string>
@@ -557,7 +564,7 @@
   <string name="Sep">Sep.</string>
   <string name="ShareTo">Share to %s</string>
   <string name="SharedTo">Share to</string>
-  <string name="Sharing_Management">sharing management</string>
+  <string name="Sharing_Management">Sharing Management</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
   <string name="Start_Failed">Start failed</string>
@@ -568,11 +575,11 @@
   <string name="Start_instructions">Start instructions</string>
   <string name="Start_instructions_A">In the WeChat Official Accounts in the binding Clever Dog email, you can open this function.</string>
   <string name="Start_instructions_B">Proceed as follows:</string>
-  <string name="Start_instructions_C">1. Please pay attention to WeChat public number \"Clever Dog WeChat Official Account\"</string>
-  <string name="Start_instructions_D">Method 1: click on the WeChat in the upper right corner of the \"+\"> Add Contacts>Official Accounts, search \"Clever Dog WeChat Official Account\" and then concerned.</string>
+  <string name="Start_instructions_C">1. Please pay attention to WeChat public number \"加菲狗官微服务\"</string>
+  <string name="Start_instructions_D">Method 1: click on the WeChat in the upper right corner of the \"+\"> Add Contacts>Official Accounts, search \"加菲狗官微服务\" and then concerned.</string>
   <string name="Start_instructions_E">Method 2: screenshot of this page or save the following two&#8211;dimensional code to the album, in the WeChat sweep sweep attention.</string>
   <string name="Start_instructions_F">2. Bind account</string>
-  <string name="Start_instructions_G">Attention \"Clever Dog WeChat Official Account\" Official Accounts, enter the main page, click the menu bar of the service, select the binding account.</string>
+  <string name="Start_instructions_G">Attention \"加菲狗官微服务\" Official Accounts, enter the main page, click the menu bar of the service, select the binding account.</string>
   <string name="Start_instructions_H">Bind account</string>
   <string name="Start_instructions_I">Please enter the Clever dog email account to bind, such as forget the password please go to the Clever dog client back</string>
   <string name="Switch_Mode">please switch to direct mode to view shooting content</string>
@@ -646,7 +653,7 @@
   <string name="Tap1_Album_Share_To_Daily_Great">The shared content will be saved to\"Daily Great\"</string>
   <string name="Tap1_BigPic_FavoriteTips">Collect pics in\"Daily Great\"</string>
   <string name="Tap1_CameraFun_Standby">Standby</string>
-  <string name="Tap1_CameraFun_Standby_Description">Start standby to hibernate, that will be unable to watch live, check history videos, protect and alert, auto&#8211;recording, time&#8211;lapse photography and etc.</string>
+  <string name="Tap1_CameraFun_Standby_Description">Start standby to hibernate, that will be unable to watch live, check history videos, protect and alert, Video settings, time&#8211;lapse photography and etc.</string>
   <string name="Tap1_CameraFun_Standby_OnTips">Time&#8211;lapse photographing, unable to standby</string>
   <string name="Tap1_CameraFun_Timelapse">Time&#8211;lapse photography</string>
   <string name="Tap1_CameraFun_Timelapse_Countdown">Remaining time</string>
@@ -672,7 +679,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Need to turn off standby before time&#8211;lapse photographing, sure?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Sure</string>
   <string name="Tap1_CameraFun_Timelapse_document">Get down more wonderful moments with time&#8211;lapse photography</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s hours</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%hours</string>
   <string name="Tap1_CameraFun_UninitializedTips">Failed to read Micro SD card</string>
   <string name="Tap1_CameraFun_VideoDirection">Reverse</string>
   <string name="Tap1_Camera_BackLiveTips">Back to live</string>
@@ -681,7 +688,7 @@
   <string name="Tap1_Camera_Greetings">Sunrise and sunset, family life and baby\'s growing&#8230;Always have things deserved to be recorde for everyday</string>
   <string name="Tap1_Camera_Messages">Messages</string>
   <string name="Tap1_Camera_Messages_ViewTheVideo">Video</string>
-  <string name="Tap1_Camera_MotionDetection_OffTips">Turn off \"Motion Detection\" will also stop recording \"when abnormalities been detected\"</string>
+  <string name="Tap1_Camera_MotionDetection_OffTips">Turn off \"Motion Detection\" will also stop recording \"Motion detection alarm recording\"</string>
   <string name="Tap1_Camera_NoSDCardTips">No SD card detected</string>
   <string name="Tap1_Camera_Overlook">Overlook</string>
   <string name="Tap1_Camera_OverlookTips">Viewing with overlooking angle needs to place the camera on high</string>
@@ -730,7 +737,7 @@
   <string name="Tap1_HomeMode">Home mode</string>
   <string name="Tap1_HomeMode_Opened">Home mode has been opened</string>
   <string name="Tap1_Index_DayGreetings">Expect for everyday</string>
-  <string name="Tap1_Index_NightGreetings">Take a rest and restart again</string>
+  <string name="Tap1_Index_NightGreetings">Rest is for better work</string>
   <string name="Tap1_Index_NoDevice">No device</string>
   <string name="Tap1_Index_Tips_Newvisitor">New visitor</string>
   <string name="Tap1_Index_Tips_Newvoice">New voice message</string>
@@ -741,6 +748,7 @@
   <string name="Tap1_LowPower">Low power, please charge in time.</string>
   <string name="Tap1_Magnetism_ClearRecord">Clear the record</string>
   <string name="Tap1_Magnetism_Setting_Notify">Notify me when it\'s open/closed</string>
+  <string name="Tap1_Menu_More">More</string>
   <string name="Tap1_NeedsInitializedTips">SD card needs to be initialized and data would be cleared, sure to continue?</string>
   <string name="Tap1_NewFirmware">New firmware</string>
   <string name="Tap1_NoMessages">No messages</string>
@@ -796,6 +804,7 @@
   <string name="Tap2_Timelapse_screenshot">Live screenshot</string>
   <string name="Tap2_Timelapse_title">Time&#8211;lapse photography</string>
   <string name="Tap2_TitleName">Daily Great</string>
+  <string name="Tap2_TitleName_Sentence">Enjoy Everyday</string>
   <string name="Tap2_share_sharevideo">I shared a video with you</string>
   <string name="Tap2_share_sharevideo_tips">I\'ve made a time&#8211;lapse photography by Clever Dog Smart Camera, check it out!</string>
   <string name="Tap2_share_unabletoshare">No Wechat installed, unable to share.</string>
@@ -871,6 +880,7 @@
   <string name="Tap3_ShareDevice_NoDevice">No device yet</string>
   <string name="Tap3_ShareDevice_NoShare">Not been shared</string>
   <string name="Tap3_ShareDevice_NoneFriends">None</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">No friends can be shared</string>
   <string name="Tap3_ShareDevice_NotYourself">Can\'t share with yourself</string>
   <string name="Tap3_ShareDevice_Shared">Shared</string>
   <string name="Tap3_ShareDevice_SharedContents">Shared contents</string>
@@ -913,6 +923,7 @@
   <string name="USE_HELP">Help</string>
   <string name="Unconnect_Network">Your device is not connected to a mobile network, or a Wi&#8211;Fi network</string>
   <string name="VALID_STORAGE">Valid storage</string>
+  <string name="VIDEO_FirmwareUpdating">Firmware updating&#8230;</string>
   <string name="VIDEO_REFRESHING">LOADING</string>
   <string name="VIDEO_SD_DESC">The SD card initialization is required to store video</string>
   <string name="WARN_TIME">Warning time</string>
